fixed header alignment, hopefully for the absolute last time.

--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,29 @@ header {
     var(--arrakeen-sand) 100%            
   );
     color: #f5f5f5;
-    padding: 1.5rem 20%;
-
+  padding: 1rem;
     width: 100%;
     height: 13vh;
     display: flex;
+    justify-content: space-between;
+}
+
+#left-container {
+    height: 100%;
+   color: transparent;
+   width: 200px;
+}
+
+#middle-container {
+    display: flex;
+    justify-content: center;
+
+}
+
+#right-container {
+  width: 200px;
+   display: flex;
+    justify-content: center;
 }
 
 
@@ -77,9 +95,7 @@ header {
     );
   color: var(--fremen-night);
   font-weight: 600;
-  position: relative;
   width: 12rem;
-  left: 50%;
   text-decoration: none;
   font-size: 1.5rem;
   padding: 0.55rem 1.2rem;      
@@ -112,12 +128,7 @@ header {
   outline-offset: 2px;
 }
 
-#left-container {
-    display: flex;
-    justify-content: flex-start;
-    width: 80%;
 
-}
 
 nav {
    width: 35rem;
@@ -127,8 +138,6 @@ nav {
   box-shadow: inset 5px 5px 10px 4px rgba(0,0,0,0.5);    
   padding: 0.75rem 1.5rem;
   border-radius: 30%;
-  left: 280px;
-  position: relative;
 }
 
 #nav-list {
@@ -167,12 +176,6 @@ nav a::after {
 nav a:hover::after,
 nav a:focus::after {
   width: 100%;
-}
-
-#right-container {
-   display: flex;
-    justify-content: end;
-   width: 50%;
 }
 
 #about-me-container {
@@ -318,7 +321,7 @@ footer p {
     text-align: center;
 }
 
-@media (max-width: 1467px) {
+@media (max-width: 1200px) {
     header {
         flex-direction: column;
         height: auto;   
@@ -335,7 +338,7 @@ footer p {
     position: initial;
 }
 
-  #left-container {
+  #middle-container {
     width: 100%;
     padding-top: 1rem;
     justify-content: center;
